--- a/Ecommerce/package.json
+++ b/Ecommerce/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-credit-cards-2": "^1.0.3",
     "react-dom": "^18.3.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^7.1.3",
     "sonner": "^1.7.2"
   },
